--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,23 @@
     background-color: purple;
 
 }
+
+li.nav-item {
+    padding-right: 15px;
+}
+
+.modal-preauth {
+    display: block;
+}
+
+.modal-postauth {
+    display: none;
+}
+
+input {
+    display: "block";
+    margin: 8px 0;
+    padding: 8px 2px;
+    border-width: 0 0 2px 0;
+    width: 100%;
+}
