--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,8 @@
     width: 100%;
     font-size: 200%;
     text-align: center;
-    color: skyblue;
-    background-color: purple;
+    color: darkgreen;
+    background-color: lightsalmon;
 
 }
 
